--- a/glut_test.vcproj
+++ b/glut_test.vcproj
@@ -166,6 +166,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\collision.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\game.cpp"
 				>
 			</File>
@@ -191,6 +195,10 @@
 			</File>
 			<File
 				RelativePath=".\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\player.cpp"
 				>
 			</File>
 			<File
@@ -232,11 +240,19 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\collision.h"
+				>
+			</File>
+			<File
 				RelativePath=".\drawable.h"
 				>
 			</File>
 			<File
 				RelativePath=".\game.h"
+				>
+			</File>
+			<File
+				RelativePath=".\game_states.h"
 				>
 			</File>
 			<File
@@ -261,6 +277,10 @@
 			</File>
 			<File
 				RelativePath=".\main.h"
+				>
+			</File>
+			<File
+				RelativePath=".\player.h"
 				>
 			</File>
 			<File
